Update SAVE_KEY to idleTrade_v6_ultimate_fix

--- a/index.htm
+++ b/index.htm
@@ -338,7 +338,7 @@
 <div id="eventPopup" class="event-popup" style="display:none"></div>
 
 <script>
-const SAVE_KEY = "idleTrade_v5_ultimate";
+const SAVE_KEY = "idleTrade_v6_ultimate_fix";
 const FPS = 20;
 
 // ==================== STATE ====================
